[package]
name = "ramshield"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ramshield"
path = "src/main.rs"

[[bin]]
name = "ramshield-cli"
path = "src/cli.rs"

[lib]
name = "ramshield"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.52.3", features = ["full"] }
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
anyhow = "1.0.102"
thiserror = "1.0.69"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
async-trait = "0.1.89"
dashmap = "5.5.3"
ahash = "0.8.12"
crc32fast = "1.5.0"
lz4_flex = "0.11.6"
sysinfo = "0.29.11"
crossbeam-channel = "0.5.11"
uuid = { version = "1.10.0", features = ["v4", "serde"] }

parking_lot = "0.12.1"
pin-project-lite = "0.2.13"
http = "1.0.0"
axum = "0.7.5"
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs", "cors"] }
mime = "0.3.17"
http-body-util = "0.1.0"
http-body = "1.0.0"
hyper = { version = "1.0.0", features = ["server"] }
hyper-util = { version = "0.1.5", features = ["full"] }
toml = "0.8.20"
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "module_bench"
harness = false