[package]
name    = "ramshield"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ramshield"
path = "src/main.rs"
required-features = ["full"]

[[bin]]
name = "ramshield-cli"
path = "src/cli.rs"

[lib]
name = "ramshield"
path = "src/lib.rs"

[features]
full = ["tokio/full", "tracing-subscriber/env-filter", "tracing-subscriber/fmt", "tower-http/cors", "clap/derive"]

[dependencies]
tokio             = { version = "1", features = ["full"] }
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
dashmap           = "5"
ahash             = "0.8"
arc-swap          = "1"
crossbeam-channel = "0.5"
crc32fast         = "1"
lz4_flex          = "0.11"
thiserror         = "1"
anyhow            = "1"
tracing           = "0.1"
tracing-subscriber = { version = "0.3", default-features = false }
clap              = { version = "4", default-features = false, features = ["std", "derive"] }
toml              = "0.8"
num_cpus          = "1"
axum              = "0.7"
tower             = { version = "0.5", features = ["util"] }
tower-http        = { version = "0.5", features = ["cors"] }
futures-util      = "0.3"
tokio-stream      = "0.1"
ctrlc             = "3"
sysinfo           = "0.29"
shlex = "2.0.1"
chrono = "0.4"

[[bench]]
name = "score_bench"
path = "benches/score_bench.rs"
harness = false



[dev-dependencies]
serial_test = "3"
proptest = "1"
criterion = "0.5"
